src/css/styles.css
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

:root {
  --row: 30;
  --col: var(--row);
}

.visible {
  height: 20px;
  width: 20px;
  border: 1px solid black;
}

.root {
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: royalblue;
  overflow:hidden;
}

#board {
  display: grid;
  background-color: black;
  margin: 1rem;
  grid-template-columns: repeat(var(--col), 20px);
  grid-template-rows: repeat(var(--row));
  border: 5px solid whitesmoke;
}

#audioButton {
  position: absolute;
  right: 0px;
  bottom: 0px;
  height: 7rem;
  width: 7rem;
}

#overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 99;
  background-color: rgba(0, 0, 0, 0.7);
  display: none;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border-radius:15px;
}
.overlay__container {
  position: absolute;
  background-color: white;
  padding: 2em;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: black;
  text-align: center;
  width: 400px;
  display: flex;
  flex-direction: column;
  border-radius: 15px;
}
.overlayGrid {
  display:grid;
  grid-template-columns:190px 150px;
  font-size: 1.3em;
  padding: 1.5em;
  justify-items: left;
  max-width: 340px;
  align-self: center;
  align-items: center;
  line-height: 45px;
}

#overlay__head{
  color: #F37736;
}

#toggleButton {
  font-size: 1.5rem;
  font-weight: bold;
  border: none;
  border-radius: 10px;
  color: white;
  cursor: pointer;
  padding: 10px 20px;
  background-color: royalblue;
  transition: 0.4s all ease;
}

#toggleButton:hover {
  background-color: rgb(45, 74, 162);
}

.visible {
  display: flex !important;
}

select#difficulty, select#theme {
    padding: 6px;
    border-radius: 5px;
    font-weight: 600;
    min-width: 100px;
}

.soundToggleWrapper {
    display:flex;
}

.option>select{
  background-color: aquamarine;
  border: 1px solid black;
  padding: 1% 2%;
  font-size: 1rem;
}

input[type=checkbox]{
  height: 0;
  width: 0;
  visibility: hidden;
}

label {
  cursor: pointer;
  width: 55px;
  height: 30px;
  background: grey;
  display: block;
  border-radius: 70px;
  position: relative;
  transition: 0.3s ease-in-out;
}

label:after {
  content: '';
  position: absolute;
  top: 5px;
  left: 5px;
  width: 20px;
  height: 20px;
  background: #fff;
  border-radius: 60px;
  transition: 0.3s ease-in-out;
}

input:checked + label {
  background: #79ed59;
}

input:checked + label:after {
  left: calc(100% - 5px);
  transform: translateX(-100%);
}

.info {
  color: whitesmoke;
}

/* Modal styles */
.modal {
  display: none;
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  height: 10vh;
  max-width: 700px;
  border-radius: 5px;
  box-shadow: 0px 0px 6px 2px #666;
  background-color: #fff;
  color: black;
}

.modal-text {
  max-width: 660px;
  margin: 30px auto;
}

